// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list_files when listObjects throws an error rejects with the error 1`] = `"NOOOOOO"`;

exports[`list_files with folderID passes in correct parameters 1`] = `
Object {
  "Bucket": undefined,
  "Delimiter": "/",
  "MaxKeys": 1000000,
  "Prefix": "id/",
}
`;

exports[`list_files with no folderID passes in correct default parameters 1`] = `
Object {
  "Bucket": undefined,
  "Delimiter": "/",
  "MaxKeys": 1000000,
}
`;
